# crypto-app

./: README.md
backend/: .env  Cargo.toml
backend/src/: db.rs  main.rs
backend/src/middleware/: auth.rs
backend/src/models/: claims.rs  dto.rs
backend/src/routes/: auth_test.rs  crypto_protected.rs  crypto_public.rs  history.rs  mod.rs
backend/src/security/: aes.rs  keywrap.rs  mod.rs
backend/src/store/: keys.rs  mod.rs  operations.rs
docs/: ENCRYPTION AND DECRYPTON -- FULLSTA.txt
frontend/: package-lock.json  package.json  svelte.config.js
frontend/src/: app.html
frontend/src/routes/: +layout.svelte  +page.svelte
frontend/static/: smui-dark.css  smui.css
mui-frontend/: package-lock.json  package.json
