[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.7"
tokio = { version = "1.39", features = ["rt-multi-thread", "macros"] }
tower-http = { version = "0.5", features = ["cors", "trace"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dotenvy = "0.15"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
argon2 = "0.5"
sha2 = "0.10"
hex = "0.4"
rand = "0.8"
jsonwebtoken = "9"
uuid = { version = "1", features = ["serde", "v4"] }
axum-extra = { version = "0.9", features = ["typed-header"] }
anyhow = "1"
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "json"] }
aes-gcm = { version = "0.10", features = ["aes"] }
base64 = "0.22"
thiserror = "1"
chrono = { version = "0.4", features = ["serde"] }
rand_core = "0.6"


